빅데이터분석기사 5회 작업형2

--- a/Data/빅데이터분석기사5회/code.ipynb
+++ b/Data/빅데이터분석기사5회/code.ipynb
@@ -1,6 +1,21 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "빅데이터 분석기사 5회 실기 기출 유형\n",
+    "[가격 예측] 중고 자동차\n",
+    "자동차 가격을 예측해주세요!\n",
+    "예측할 값(y): price\n",
+    "평가: RMSE (Root Mean Squared Error)\n",
+    "data: train.csv, test.csv"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "508e17ea6a345944"
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "initial_id",
